attached_assets/Pasted--nodemon-app-crashed-waiting-for-file-changes-before-starting-nodemon-restarting-due-to-chan-1749670969143_1749670969144.txt
[nodemon] app crashed - waiting for file changes before starting...
[nodemon] restarting due to changes...
[nodemon] starting `node index.js`
/home/runner/workspace/server/node_modules/@graphql-tools/merge/cjs/typedefs-mergers/input-type.js:24
            throw new Error(`Unable to merge GraphQL input type "${node.name.value}": ${e.message}`);
            ^

Error: Unable to merge GraphQL input type "NotificationInput": Field "type" already defined with a different type. Declared as "NotificationType", but you tried to override with "String"
    at mergeInputType (/home/runner/workspace/server/node_modules/@graphql-tools/merge/cjs/typedefs-mergers/input-type.js:24:19)
    at mergeGraphQLNodes (/home/runner/workspace/server/node_modules/@graphql-tools/merge/cjs/typedefs-mergers/merge-nodes.js:54:84)
    at mergeGraphQLTypes (/home/runner/workspace/server/node_modules/@graphql-tools/merge/cjs/typedefs-mergers/merge-typedefs.js:72:64)
    at mergeTypeDefs (/home/runner/workspace/server/node_modules/@graphql-tools/merge/cjs/typedefs-mergers/merge-typedefs.js:14:22)
    at Object.<anonymous> (/home/runner/workspace/server/graphql/schema/index.js:54:18)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)

Node.js v20.18.1
[nodemon] app crashed - waiting for file changes before starting...
[nodemon] restarting due to changes...
[nodemon] starting `node index.js`
/home/runner/workspace/server/graphql/schema/types.js:4
const { gql } = require("graphql-tag");
        ^

SyntaxError: Identifier 'gql' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1378:20)
    at Module._compile (node:internal/modules/cjs/loader:1428:41)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (/home/runner/workspace/server/graphql/schema/index.js:7:15)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)

Node.js v20.18.1
[nodemon] app crashed - waiting for file changes before starting...